Restyled bestiary entries to have the same twin column text / image layout as category overviews. Flipped overview text / image order to create contrast with entries. Updated category header positions Fixed ordering of text / image columns on mobile to ensure images always come first. Added rules.html placeholder page and updated navbars to include it.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -146,7 +146,7 @@ body {
 }
 
 .test-border {
-    //border-style: dashed !important;
+    border-style: dashed !important;
     border: white;
     border-width: 1px;
 }
